<resources>
    <string name="app_name">EFTP2PeMal</string>
    <string name="SIGNAL_STRENGTH">Signal Strength</string>
    <string name="PING_RESULT">Ping Result</string>
    <string name="SUCCESS">Success</string>
    <string name="FAILED">Failed</string>
    <string name="MPOS">MPOS</string>
    <string name="ALREADY_CONNECTED">Already Connected</string>
    <string name="CONNECTING">Connecting\n</string>
    <string name="CONNECT_SUCCESS">Connect Successful</string>
    <string name="CONNECT_FAILED_PLEASE_CHECK_DEVICE">Connect Failed\nPlease Check Device\n</string>
    <string name="DISCONNECTING">Disconnecting\nPlease Wait</string>
    <string name="DISCONNECT_COMPLETED">Disconnect Completed</string>
    <string name="ALREADY_DISCONNECT">Already Disconnected</string>
    <string name="SEARCHING">Searcing</string>
    <string name="DEVICES_FOUND">Devices Found</string>
    <string name="SELECT_YOUR_DEVICE">Select Your Device</string>
    <string name="SAVED_DEVICE">Saved Device</string>
    <string name="CONFIG_LOADED">Configuration Loaded</string>
    <string name="CONFIG_LOADING">Loading Configuration</string>
    <string name="CONFIG_LOAD_ERROR">Config Load Error\nReconnect and Try Again</string>
    <string name="NOT_CONNECTED_PLEASE_CONNECT_FIRST">Not Connected\nPlease Connect First</string>
    <string name="LOADING_FIRMWARE">Loading Firmware</string>
    <string name="FIRMWARE_UP_TO_DATE">Firmware Up to Date</string>
    <string name="FIRMWARE_UPDATE_ERROR">Firmware Update Error</string>
    <string name="MPOS_WIZARD">MPos Wizard</string>
    <string name="SEARCHING_FOR">Searching for </string>
    <string name="SEARCHING_CR">Searching\n</string>
    <string name="PROCESSING">Processing</string>
    <string name="CHECKING_LOYALTY">Checking Loyalty</string>
    <string name="PROCESSING_LOYALTY_CTLS">Congratulations\nPlease TAP Again\nTo Redeem Discount</string>
    <string name="PLEASE_WAIT">Please Wait</string>
    <string name="CASHIER_ADDED">Cashier Added</string>
    <string name="UPDATING_CONFIG">Updating Config</string>
    <string name="APPLYING_CONFIG">Applying New Config</string>
    <string name="PASSWORD_INCORRECT">Password Incorrect</string>
    <string name="PASSWORD_INCORRECT_TRY_AGAIN">Password Incorrect.Try Again</string>
    <string name="INSUFFICIENT_PRIVILEGES">Insufficient Privileges</string>
    <string name="CASHIER_NOT_FOUND">Cashier Not Found</string>
    <string name="FAILED_TO_LOGIN">Failed to Login</string>
    <string name="BATCH_UPLOAD">Batch Upload</string>
    <string name="PENDING">Pending</string>
    <string name="NO_TRANS_TO_UPLOAD">No Transactions\nto Upload</string>
    <string name="CASHIER_LOCKED">Cashier Locked</string>
    <string name="SERVICE_STATUS">Service Status </string>
    <string name="PING_TEST">Ping Test</string>
    <string name="TEST_PUBLIC_SERVICES">Testing Public Service</string>
    <string name="LOG_CLEAR">Log Clear</string>
    <string name="PLEASE_WAIT_BR">(Please Wait)</string>
    <string name="LOG_EMPTY">Log Empty</string>
    <string name="SUCCESSFUL">Successful</string>
    <string name="TESTING_PAYMENT_SERVICE">Testing Payment Service</string>
    <string name="SOFTWARE_UPDATED">Software Updates</string>
    <string name="CHECKING_PLEASE_WAIT">Checking\nPlease Wait</string>
    <string name="DATABASE_CLEAR">Databases Clear</string>
    <string name="DATABASE_CLEARED">Done</string>
    <string name="PING_TEST_SUCCESSFUL">Ping Test Successful</string>
    <string name="PING_TEST_FAILED">Ping Test Failed \nPublic Service: </string>
    <string name="UPDATE_FAILED">Update Failed</string>
    <string name="FAILED_TO_ADD">Failed to Add</string>
    <string name="TEST_KEY_INJECT">Test Key Inject</string>
    <string name="UDP_DEBUGGING">UDP Debugging</string>
    <string name="DATABASE_LIST">Trans List</string>
    <string name="DATABASE_EMPTY">Database Empty\n(No transactions stored)</string>
    <string name="ID_ALREADY_USED">ID Already in Use</string>
    <string name="NO_ENTRIES">No Entries</string>
    <string name="PASSWORD_UPDATED">Password Updated</string>
    <string name="FAILED_TO_DELETE">Failed to Delete</string>
    <string name="FAILED_LC">Failed</string>
    <string name="CARD_ALREADY_LINKED">Card already linked</string>
    <string name="CASHIER_DELETE">Cashier Delete</string>
    <string name="OPERATION_NOT_ALLOWED">Operation Not Allowed</string>
    <string name="ICC_DIAGS">ICC Diags</string>
    <string name="DISABLED">Disabled</string>
    <string name="PASSWORD_EXPIRED">Password Expired</string>
    <string name="PASSWORD_RESET">Password Reset</string>
    <string name="USER_PASSWORD">Initial Passcode for User %1$s\n is %2$s</string>
    <string name="USER_INITIAL_PASSCODSE">Initial Passcode</string>
    <string name="FAILURE">Failure</string>
    <string name="RESET_FAILED">Reset Failed</string>
    <string name="USER_REPORT">User Report</string>
    <string name="CASHIERS_NOT_FOUND">Cashiers Not Found</string>
    <string name="FAILED_TO_LOCK_CASHIER">Failed to Lock Cashier</string>
    <string name="CASHIER_UNLOCKED">Cashier Unlocked</string>
    <string name="CASHIER_DELETED">Cashier Deleted</string>
    <string name="PASSWORD_DOESNT_MATCH">Password Do Not Match</string>
    <string name="ENABLED">Enabled</string>
    <string name="UDP_PING_TEST">UDP Ping Test</string>
    <string name="TESTING_PUBLIC_SERVICES">Testing Public Service</string>
    <string name="CTLS_NOT_ENABLED">CTLS\nNot Enabled on Card</string>
    <string name="TRANSACTION_ERROR">Transaction Error</string>
    <string name="CARD_REMOVED_EARLY">Card Removed\nEarly</string>
    <string name="TOTAL_REPORT">Total Report</string>
    <string name="TOTALS_REPORT">Totals Report</string>
    <string name="CLEAR_TOTALS">Clear Totals?</string>
    <string name="NO_DATA_AVAILABLE">No Data Available</string>
    <string name="READING_CARD">Reading Card</string>
    <string name="BUDGET">Budget</string>
    <string name="VALUE_EXCEEDS_MAX">Values Exceeds Maximum : 60 Months</string>
    <string name="CARD_TYPE_NOT_ALLOWED">Card Type\nNot Allowed</string>
    <string name="NO_PAIRED_MPOS">No Paired MPOS</string>
    <string name="PLEASE_CONFIGURE_DEVICE">Please Configure Device</string>
    <string name="BATTERY_LOW_PLEASE_CHARGE">Battery Too Low\nPlease Charge</string>
    <string name="PAPER_OUT_PLEASE_INSERT">Paper Out\nPlease Insert Paper</string>
    <string name="ERROR">Error</string>
    <string name="PRINTER_ERROR">Printer Error\n</string>
    <string name="CLOSE_BRACKET">)</string>
    <string name="NO_TRANSACTION_TO_RECONCILE">No Transactions\nto Reconcile</string>
    <string name="RECONCILIATION">Reconciliation</string>
    <string name="LAST_RECONCILIATION">Last Reconciliation</string>
    <string name="PRE_RECONCILIATION">Pre-Reconciliation</string>
    <string name="MAC_FAILURE">Response MAC Invalid</string>
    <string name="NOT_AVAILABLE_PLEASE_CONNECT">Not Available\nPlease Connect Terminal</string>
    <string name="INVALID_RECEIPT_NUMBER">Invalid Receipt Number</string>
    <string name="INVALID_AMOUNT">"Invalid Amount</string>
    <string name="UNABLE_TO_REVERSE">Unable to Void\nTransaction</string>
    <string name="UNABLE_TO_REVERSE_TOO_OLD">Unable to Void\nTransaction\nToo Old</string>
    <string name="ALREADY_REVERSED">Already Voided</string>
    <string name="REVERSAL">Void</string>
    <string name="TIME_DATE_ERROR">Time and Date\nSettings of Device\nIncorrect</string>
    <string name="TIMESYNC">Device Time Must\nNow be Corrected,\nPress Continue to Update</string>
    <string name="TRANSACTION_TYPE_CANT_BE_REVERSED">Transaction Type\nCan\'t be Voided</string>
    <string name="COMMS_ERROR">Comms Error</string>
    <string name="INQUIRY_FAILED">Inquiry Failed</string>
    <string name="CASH_IN_FAILED">Cash-in Failed</string>
    <string name="UPDATE">Update</string>
    <string name="FORCE_UPDATE">Force Update</string>
    <string name="CELLULAR_SETTINGS">Cellular Settings</string>
    <string name="AIRPLANE_MODE">Airplane Mode</string>
    <string name="LOGOUT">Logout</string>
    <string name="SETTINGS">Settings</string>
    <string name="WIFI_SETTINGS">WiFi Settings</string>
    <string name="APN_SETTINGS">APN Settings</string>
    <string name="INPUT_SETTINGS">Input Settings</string>
    <string name="DISPLAY_SETTINGS">Display Settings</string>
    <string name="APP_SETTINGS">App Settings</string>
    <string name="TOTALS_SETTINGS">Totals Settings</string>
    <string name="SOUND_SETTINGS">Sound Settings</string>
    <string name="EXIT">Exit</string>
    <string name="LAST_REBOOT_TIME">Last Reboot Time:   </string>
    <string name="ACTIVATE">Activate</string>
    <string name="DEACTIVATE">Deactivate</string>
    <string name="EXIT_KIOSK">Exit Launcher</string>
    <string name="NEXT">Next ></string>
    <string name="CANCEL_SETUP">Cancel Setup</string>
    <string name="PAIR_WITH_WIFI_BASE_STATION">Pair With WiFi Base Station</string>
    <string name="CURRENT_STATUS">Current Status</string>
    <string name="UNPAIRED">Unpaired</string>
    <string name="PAIR_BS_DETAILS">If not paired, use the bluetooth settings and select the base station(starting L920) from the list of available devices.</string>
    <string name="OPEN_BLUETOOTH_SETTINGS">Open Bluetooth Settings</string>
    <string name="WIFI_BASE_CONFIG">L920 Base Configuration</string>
    <string name="CURRENT_PROGRESS">Progress</string>
    <string name="PAIR">1\nPAIR</string>
    <string name="LAN">2\nLAN</string>
    <string name="AP">3\nAP Wifi</string>
    <string name="TEST_NL">4\nTEST</string>
    <string name="SETUP_ETHERNET_BASE">Setup Ethernet</string>
    <string name="SCREEN_SAVER_SUMMARY">1 - 120(s) before Screensaver</string>
    <string name="SCREEN_SAVER_TITLE">Screensaver Timeout (sec)</string>
    <string name="MER_RECEIPT_SUMMARY">Disable to print the customer receipt first</string>
    <string name="MER_RECEIPT_TITLE">Print: Merchant First</string>
    <string name="PRINT_CTLS_RECEIPT_SUMMARY">Enable or Disable contactless receipts</string>
    <string name="PRINT_CTLS_RECEIPT_TITLE">Print: Contactless</string>
    <string name="AUTO_LOGIN_SUMMARY">Enable or Disable auto login</string>
    <string name="AUTO_LOGIN_TITLE">Auto Logon</string>
    <string name="AUTO_LOGOFF_SUMMARY">Control automatically logging off the cashier</string>
    <string name="AUTO_LOGOFF_TITLE">Auto Logoff</string>
    <string name="AUTO_LOGOFF_TIMEOUT_SUMMARY">Time before cashier is logged off, 1 - 60(mins)</string>
    <string name="AUTO_LOGOFF_TIMEOUT_TITLE">Auto Logoff Timeout (mins)</string>
    <string name="DATE_MENU_PANEL_SUMMARY">Enable or Disable Date Menu Panel</string>
    <string name="DATE_MENU_PANEL_TITLE">Date Menu Panel</string>
    <string name="DISPLAY_DEV_SUMMARY">Enable or Disable Dev Menu</string>
    <string name="DISPLAY_DEV_TITLE">Dev Menu</string>
    <string name="PRINT_MERCH_RECEIPT_SUMMARY">Disable to never print the merchant copy</string>
    <string name="PRINT_MERCH_RECEIPT_TITLE">Print: Merchant Receipt</string>
    <string name="PRINT_SCREEN_RECEIPT_SUMMARY">Enable to print all receipts to the screen</string>
    <string name="PRINT_SCREEN_RECEIPT_TITLE">Print: To Screen</string>
    <string name="USB_SETTINGS">USB Settings</string>
    <string name="USB_OPERATION_MODE">USB Operation Mode</string>
    <string name="SHIFT_TOTALS_ENABLE_SUMMARY">Enable or Disable Shift Totals Menu</string>
    <string name="SHIFT_TOTALS_ENABLE_TITLE">Shift Totals</string>
    <string name="SETTLEMENT_ENABLE_SUMMARY">Enable or Disable Settlement Menu</string>
    <string name="SETTLEMENT_ENABLE_TITLE">Settlement</string>
    <string name="AUTOMATIC_SHIFT_TOTALS_ENABLE_SUMMARY">Enable or Disable Automatic Shift Totals</string>
    <string name="AUTOMATIC_SHIFT_TOTALS_ENABLE_TITLE">Automatic Shift Totals</string>
    <string name="AUTOMATIC_SHIFT_TOTALS_TIME_OF_DAY_TITLE">Automatic Shift Totals Time Of Day</string>
</resources>