<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.linkly.payment.activities.ActMainMenu">
    <!--
        <item
            android:id="@+id/action_showAdmin"
            android:orderInCategory="100"
            android:title="@string/action_admin_menu"
            app:showAsAction="never" />
    -->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/LOGOUT"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_wifi"
        android:orderInCategory="100"
        android:title="@string/WIFI_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_ethernet"
        android:orderInCategory="100"
        android:title="@string/SETUP_ETHERNET_BASE"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_apn"
        android:orderInCategory="100"
        android:title="@string/APN_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_cellular"
        android:orderInCategory="100"
        android:title="@string/CELLULAR_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_airplane_mode"
        android:orderInCategory="100"
        android:title="@string/AIRPLANE_MODE"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_input"
        android:orderInCategory="100"
        android:title="@string/INPUT_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_display"
        android:orderInCategory="100"
        android:title="@string/DISPLAY_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_sound"
        android:orderInCategory="100"
        android:title="@string/SOUND_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_settings"
        android:orderInCategory="100"
        android:title="@string/APP_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/totals_settings"
        android:orderInCategory="100"
        android:title="@string/TOTALS_SETTINGS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/EXIT"
        app:showAsAction="never"/>
</menu>
