<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_pair_with_bs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/PAIR_WITH_WIFI_BASE_STATION"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/text_pair_with_bs"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/text_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_separator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/CURRENT_STATUS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_current_status"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/UNPAIRED"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_bluetooth_status"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/PAIR_BS_DETAILS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_bluetooth_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_details"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:text="@string/OPEN_BLUETOOTH_SETTINGS" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel_setup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/CANCEL_SETUP"
            android:textColor="@color/colorRed"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/NEXT"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>