<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WIFI_BASE_CONFIG"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/image_wifi"
        android:layout_width="60dp"
        android:layout_height="60dp"
       android:layout_alignParentRight="true"
        app:srcCompat="@drawable/wifi"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/text_current_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CURRENT_PROGRESS"
        android:layout_below="@+id/text_title"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_current_progress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/text_pair"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/wifi_base_round_image_grey"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/PAIR"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/right_arrow1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_pair"
            app:srcCompat="@drawable/next" />

        <TextView
            android:id="@+id/text_lan"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_toRightOf="@+id/right_arrow1"
            android:background="@drawable/wifi_base_round_image_grey"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/LAN"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/right_arrow2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_lan"
            app:srcCompat="@drawable/next" />

        <TextView
            android:id="@+id/text_ap"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_toRightOf="@+id/right_arrow2"
            android:background="@drawable/wifi_base_round_image_grey"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AP"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/right_arrow3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_ap"
            app:srcCompat="@drawable/next" />

        <TextView
            android:id="@+id/text_test"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_toRightOf="@+id/right_arrow3"
            android:background="@drawable/wifi_base_round_image_grey"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TEST_NL"
            android:textColor="@android:color/black" />


    </RelativeLayout>

</RelativeLayout>