<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="viewModel"
            type="com.linkly.launcher.viewmodels.DownloadMenuViewModel" />
    </data>

    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             tools:context="com.linkly.launcher.fragments.DownloadMenu">


    <LinearLayout        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
                         android:fitsSystemWindows="true"
                         android:orientation="vertical"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
                         android:weightSum="2">

        <Button
            android:id="@+id/runUpdate"
            android:text="@string/UPDATE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textAppearance="@style/uiDoneBtn"
            android:textColor="@{viewModel.brandDisplayButtonTextColour}"
            android:background="@drawable/buttonstyle"
            bind:buttonBackground="@{viewModel.brandDisplayButtonColour}"
           />
        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/runForceUpdate"
            android:text="@string/FORCE_UPDATE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textAppearance="@style/uiDoneBtn"
            android:textColor="@{viewModel.brandDisplayButtonTextColour}"
            android:background="@drawable/buttonstyle"
            bind:buttonBackground="@{viewModel.brandDisplayButtonColour}"
            />
        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/runActivate"
            android:text="@string/ACTIVATE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textAppearance="@style/uiDoneBtn"
            android:textColor="@{viewModel.brandDisplayButtonTextColour}"
            android:background="@drawable/buttonstyle"
            bind:buttonBackground="@{viewModel.brandDisplayButtonColour}"
            />

        <Space
            android:id="@+id/deactivateSpace"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/runDeactivate"
            android:text="@string/DEACTIVATE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textAppearance="@style/uiDoneBtn"
            android:textColor="@{viewModel.brandDisplayButtonTextColour}"
            android:background="@drawable/buttonstyle"
            bind:buttonBackground="@{viewModel.brandDisplayButtonColour}"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/runExitKiosk"
            android:text="@string/EXIT_KIOSK"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textAppearance="@style/uiDoneBtn"
            android:textColor="@{viewModel.brandDisplayButtonTextColour}"
            android:background="@drawable/buttonstyle"
            bind:buttonBackground="@{viewModel.brandDisplayButtonColour}"
            />
    <LinearLayout        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fitsSystemWindows="true"
                         android:orientation="vertical"
                         android:gravity="bottom"
                         android:layout_gravity="bottom"
                         android:weightSum="2">

        <LinearLayout        android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fitsSystemWindows="true"
                             android:orientation="vertical"
                             android:gravity="bottom"
                             android:layout_gravity="bottom"
                             android:background="@drawable/lightbackgroundstyle"
                             android:weightSum="2">

            <TextView
                android:id="@+id/txtRebootTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TinyFontDark"
                android:text="@string/LAST_REBOOT_TIME"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</LinearLayout>
</layout>
